--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,14 @@
+
+body{
+    font-family: 'Stylish', sans-serif;
+    background-color: gray
+    /* background-image: image-set("assets/images/memphis-mini-dark.png") */
+}
+
 .crystal{
     border:2px solid blue;
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
 }
 .crystals{
     display: flex;
@@ -9,4 +16,47 @@
     
     align-items: center;
     
+}
+.text{margin-bottom: 30px;
+}
+
+#heading{
+    text-align: center;
+    background:red;
+    padding: 10px
+}
+
+#instructions{
+
+    width: 300px;
+    height: 300px;
+    background: tan;
+    padding: 60px;
+    text-align: left;
+}
+
+#numberDisplay{
+    
+    background: chocolate;
+    padding: 20px 10px;
+    width: 100px;
+}
+
+#statsSection{
+    background:violet;
+    margin: 10px 10px 10px 0px;
+    width: 100px;
+    height: 50px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#scoreBoard{
+    margin-top: 10px;
+    background: burlywood;
+    padding: top;
+    padding: 20px 10px 50px 50px;
+    width: 200px;
+
 }
